--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,6 +34,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    flex-direction: column;
     min-width: 250px;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -41,12 +42,24 @@
     margin-top: 50px;
 }
 
+.dropdown-content .signout {
+    background-color: rgb(253, 253, 253);
+    color: rgb(7, 7, 7);
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    margin: 25px;
+}
+
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: flex;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
+
