--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,11 +46,14 @@
     background-color: rgb(253, 253, 253);
     color: rgb(7, 7, 7);
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-    padding: 16px;
-    font-size: 16px;
+    padding: 8px 16px;
+    font-size: 14px;
+    max-width: 220px;
+    min-height: 40px;
+    height: auto;
     border: none;
     cursor: pointer;
-    margin: 25px;
+    margin: 1em 2em 1em 2em;
 }
 
 /* Show the dropdown menu on hover */
@@ -63,3 +66,7 @@
     background-color: #3e8e41;
 }
 
+.avatar {
+    height: 50px;
+    width: 50px;
+}
