--- a/src/app/profile.component.css
+++ b/src/app/profile.component.css
@@ -1,7 +1,20 @@
 .profile-container {
-    padding: 15px;
+    height: auto;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: rgba(51, 51, 51, 0.11);
+    color: white;
+    overflow-x: hidden;
+    transition: 0.5s;
+    margin-top: 80px;
 }
 
+.profile-container.open {
+    width: 350px;
+}
 .profile-container div {
-    margin-bottom: 15px;
+    margin: 15px;
 }
