--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0px;
+    background-color: lightgray;
+}
+
+button.mat-menu-item {
+    line-height: 24px !important;
+}
+a.mat-menu-item > mat-icon {
+margin-bottom: 14px;
+}
+.mat-icon svg {
+height: 24px;
+width: 24px;
+}
